# ndx-mp4

./: CHANGELOG.md  NEXTSTEPS.md  README.md  pyproject.toml  test_external_dataset.py
.github/workflows/: run_all_tests.yml
docs/source/: conf.py  conf_doc_autogen.py  format.rst  index.rst
notebooks/: example.ipynb
spec/: ndx-mp4.extensions.yaml  ndx-mp4.namespace.yaml
src/pynwb/ndx_mp4/: __init__.py  mp4.py
src/pynwb/ndx_mp4/widgets/: __init__.py  tetrode_series_widget.py
src/pynwb/tests/: test_tetrodeseries.py
src/spec/: create_extension_spec.py
